[gd_scene load_steps=5 format=3 uid="uid://b4x0ejpk32un7"]

[ext_resource type="Script" path="res://MultiPlayerController.gd" id="1_7wwjo"]
[ext_resource type="Texture2D" uid="uid://cbah2xm2ekm56" path="res://SPRITES/MageGameLogo.png" id="2_67sq1"]
[ext_resource type="Texture2D" uid="uid://b01eyuenm420" path="res://SPRITES/MageIcon.png" id="3_br7i5"]
[ext_resource type="Texture2D" uid="uid://cln1uohovhxem" path="res://SPRITES/HunterIcon.png" id="4_l5vfu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wwjo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1455.0
offset_top = -176.0
offset_right = 2481.0
offset_bottom = 670.0
color = Color(0.0798585, 0.123611, 0.133157, 1)

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 384.0
offset_right = 441.0
offset_bottom = 415.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 384.0
offset_right = 590.0
offset_bottom = 415.0
text = "Join
"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 657.0
offset_top = 384.0
offset_right = 753.0
offset_bottom = 415.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 423.0
offset_right = 749.0
offset_bottom = 454.0
placeholder_text = "Nickname"
alignment = 1

[node name="Address" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 460.0
offset_right = 749.0
offset_bottom = 491.0
placeholder_text = "~Server IP~"
alignment = 1

[node name="Port" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 496.0
offset_right = 749.0
offset_bottom = 527.0
placeholder_text = "~Server Port~"
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = -24.0
offset_right = 789.0
offset_bottom = 413.0
texture = ExtResource("2_67sq1")

[node name="Control" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_left = 427.0
offset_top = 532.0
offset_right = 730.0
offset_bottom = 640.0

[node name="HeroSelect" type="ItemList" parent="Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 315.0
offset_bottom = 114.0
theme_override_constants/icon_margin = 0
theme_override_constants/h_separation = -5
theme_override_font_sizes/font_size = 12
allow_reselect = true
auto_height = true
item_count = 4
max_columns = 4
same_column_width = true
icon_mode = 0
icon_scale = 1.25
item_0/text = "Mage"
item_0/icon = ExtResource("3_br7i5")
item_1/text = "Hunter"
item_1/icon = ExtResource("4_l5vfu")
item_2/text = "Paladin"
item_2/icon = ExtResource("3_br7i5")
item_2/disabled = true
item_3/text = "Assassin"
item_3/icon = ExtResource("4_l5vfu")
item_3/disabled = true

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="item_selected" from="Control/HeroSelect" to="." method="_on_item_list_item_selected"]
